--- a/Website/Sundown/index.html
+++ b/Website/Sundown/index.html
@@ -7,10 +7,12 @@
         <title>Document</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
     </head>
 
     <body>
+        <div class="fixed-image"></div>
         <div id="main">
             <div class="page1">
                 <header>
@@ -71,10 +73,100 @@
                         <div class="red-circle-shape"></div>
                     </div>
                 </div>
+                <div class="page2-extend">
+                    <h2>We are a group of design- driven, goal-focused creators, producers, and designers who
+                        believe that the details make all the difference.</h2>
+                    <div class="image-tile">
+                        <img src="https://uploads-ssl.webflow.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15d1_Holding_thumb-p-500.jpg"
+                            alt="">
+                        <p>We love to create, we love to solve, we love to collaborate, and we love to turn amazing
+                            ideas
+                            into reality. We’re here to partner with you through every step of the process and know
+                            that
+                            relationships are the most important things we build.</p>
+                    </div>
+                </div>
+                <div class="red-circle-shape2">
+                    <div class="shape-4"></div>
+                    <div class="shape-5"></div>
+                </div>
+            </div>
+            <div class="page3">
+                <div class="element-container">
+                    <div class="element" id="element-1"
+                        data-image="https://images.unsplash.com/photo-1701001308648-7b731a52b8d7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNHx8fGVufDB8fHx8fA%3D%3D">
+                        <div class="overlay"></div>
+                        <h3>Makers Studio HOI</h3>
+                    </div>
+                    <div class="element"
+                        data-image="https://images.unsplash.com/photo-1700975928909-da4a46227a47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8">
+                        <div class="overlay"></div>
+                        <h3>50th Anniversary</h3>
+                    </div>
+                    <div class="element"
+                        data-image="https://images.unsplash.com/photo-1701077137611-9be394bf62f0?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMHx8fGVufDB8fHx8fA%3D%3D">
+                        <div class="overlay"></div>
+                        <h3>NYFW Popup</h3>
+                    </div>
+                    <div class="element"
+                        data-image="https://images.unsplash.com/photo-1701014159309-4a8b84faadfe?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxOXx8fGVufDB8fHx8fA%3D%3D">
+                        <div class="overlay"></div>
+                        <h3>Air Force 1 2021</h3>
+                    </div>
+                    <div class="element"
+                        data-image="https://images.unsplash.com/photo-1700924546093-f914fd5b8814?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyOHx8fGVufDB8fHx8fA%3D%3D">
+                        <div class="overlay"></div>
+                        <h3>SOHO NYC</h3>
+                    </div>
+                    <div class="element"
+                        data-image="https://images.unsplash.com/photo-1700601437860-e66da79cf6d2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1OXx8fGVufDB8fHx8fA%3D%3D">
+                        <div class="overlay"></div>
+                        <h3>SOHO 2023</h3>
+                    </div>
+                    <div class="element"
+                        data-image="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw2OXx8fGVufDB8fHx8fA%3D%3D">
+                        <div class="overlay"></div>
+                        <h3>Play New Kidvision</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="page4">
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">Slide 1</div>
+                        <div class="swiper-slide">Slide 2</div>
+                        <div class="swiper-slide">Slide 3</div>
+                        <div class="swiper-slide">Slide 4</div>
+                        <div class="swiper-slide">Slide 5</div>
+                        <div class="swiper-slide">Slide 6</div>
+                        <div class="swiper-slide">Slide 7</div>
+                    </div>
+                </div>
+                <div class="page5"></div>
             </div>
         </div>
-
+        <footer>
+            <div class="footer-top">
+                <div class="important-links">
+                    <h5>Work</h5>
+                    <h5>Studio</h5>
+                    <h5>Contact</h5>
+                </div>
+                <div class="email-messege">
+                    <p>Get industry insights and creative inspiration straight to your inbox.</p>
+                </div>
+            </div>
+            <h4>Sundown</h4>
+            <div class="footer-end"></div>
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"
+            integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"
+            integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <!-- <script src="main.js"></script> -->
     </body>
 
