--- a/Website/Sundown/index.html
+++ b/Website/Sundown/index.html
@@ -13,6 +13,7 @@
 
     <body>
         <div class="fixed-image"></div>
+        <div class="menu-bc"></div>
         <div id="main">
             <div class="page1">
                 <header>
@@ -27,7 +28,9 @@
                             <li><a href="#">Contact</a></li>
                         </ul>
                     </nav>
-
+                    <div class="menu">
+                        <h3>Menu</h3>
+                    </div>
                 </header>
                 <div class="main-text">
                     <div class="left">
@@ -91,7 +94,12 @@
                     <div class="shape-5"></div>
                 </div>
             </div>
+
             <div class="page3">
+                <div class="page-heading">
+                    <div class="bullets"></div>
+                    <h4>FEATURED PROJECTS</h4>
+                </div>
                 <div class="element-container">
                     <div class="element" id="element-1"
                         data-image="https://images.unsplash.com/photo-1701001308648-7b731a52b8d7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNHx8fGVufDB8fHx8fA%3D%3D">
@@ -129,9 +137,15 @@
                         <h3>Play New Kidvision</h3>
                     </div>
                 </div>
+                <div class="btn-project">
+                    <button><a href="#">All Projects</a></button>
+                </div>
             </div>
             <div class="page4">
-                <div class="swiper mySwiper">
+                <div class="container-page4">
+                    .
+                </div>
+                <!-- <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">Slide 1</div>
                         <div class="swiper-slide">Slide 2</div>
@@ -141,9 +155,10 @@
                         <div class="swiper-slide">Slide 6</div>
                         <div class="swiper-slide">Slide 7</div>
                     </div>
-                </div>
-                <div class="page5"></div>
+                </div> -->
+
             </div>
+            <div class="page5"></div>
         </div>
         <footer>
             <div class="footer-top">
@@ -159,15 +174,16 @@
             <h4>Sundown</h4>
             <div class="footer-end"></div>
         </footer>
+
         <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"
             integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"
             integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg=="
-            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-        <!-- <script src="main.js"></script> -->
+        <script src="main.js"></script>
     </body>
 
 </html>
