--- a/2k24_Design/Wcrm_login/index.html
+++ b/2k24_Design/Wcrm_login/index.html
@@ -46,7 +46,7 @@
     <div class="wrapper">
         <div class="container main">
             <div class="row">
-                <div class="col-md-6 left">
+                <div class="col-lg-6 left">
                     <div class="data">
                         <div class="collection__data">
                             <img src="assets/img/logo.png" alt="image" class="company__logo">
@@ -71,6 +71,14 @@
                             </div>
                             <div class="input-field">
                                 <input type="submit" class="submit" value="Sign In">
+                            </div>
+                        </div>
+                        <div class="alternate__login">
+                            <div class="__options">
+                                <span class="text__shoe"></span>
+                                <a href="#">
+                                    <span></span>
+                                </a>
                             </div>
                         </div>
                     </div>
