--- a/Fontend_WebDevelopment/Level-1/project-2/index.html
+++ b/Fontend_WebDevelopment/Level-1/project-2/index.html
@@ -31,12 +31,10 @@
             </div>
             <!-- About Me Section -->
             <div class="about">
-                <div class="left-part">
-                    <h4>As a digital designer, I focus on producing top-notch and impactful digital experiences.</h4>
-                </div>
-                <div class="right-part">
-                    <h5>(About Me)</h5>
-                    <div class="social">
+                <h3>As a digital designer, I focus on producing top-notch and impactful digital experiences.</h3>
+                <div class="about-part">
+                    <h4>(About Me)</h4>
+                    <div class="icons">
                         <a href="#">
                             <i class="ri-instagram-line"></i>
                         </a>
