--- a/2k24_Design/Wcrm_login/indexv2.html
+++ b/2k24_Design/Wcrm_login/indexv2.html
@@ -26,14 +26,15 @@
                         <label for="">Password<span>*</span><br>
                             <input type="password" placeholder="Password" required>
                         </label><br>
+                        
+                        <button type="submit">Login</button>
                         <div class="checks">
-                            <label for=""><input type="checkbox" name="rememberme" id="">remember me</label>
+                            <!-- <label for=""><input type="checkbox" name="rememberme" id="">remember me</label> -->
                             <a href="#">Forgot your password?</a>
                         </div>
-                        <button type="submit">Login</button>
                         <div class="alternate-text">
                             <div class="shape-line"></div>
-                            <div class="text-login">Or,login with</div>
+                            <div class="text-login">Or, login with</div>
                         </div>
                         <button><img src="" class="google-logo" alt="google">Sign up with google</button>
                         <div class="register-line">
