--- a/Fontend_WebDevelopment/Level-1/project-2/index.html
+++ b/Fontend_WebDevelopment/Level-1/project-2/index.html
@@ -17,7 +17,7 @@
                 <div class="menu-item">Menu</div>
             </header>
             <!-- Hero Section -->
-            <div class="main-title">
+            <div class="intro">
                 <h1>Bent Lindberg<br>
                     Digital Designer</h1>
                 <div class="place">
@@ -35,15 +35,42 @@
                 <div class="about-part">
                     <h4>(About Me)</h4>
                     <div class="icons">
-                        <a href="#">
-                            <i class="ri-instagram-line"></i>
-                        </a>
-                        <a href="#">
-                            <i class="ri-twitter-line"></i>
-                        </a>
-                        <a href="#">
-                            <i class="ri-facebook-line"></i>
-                        </a>
+                        <a href=""><i class="ri-instagram-fill"></i></a>
+                        <a href=""><i class="ri-twitter-fill"></i></a>
+                        <a href=""><i class="ri-dribbble-fill"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="work">
+                <div class="side-title">
+                    <h3>(What I do)</h3>
+                    <i class="ri-arrow-right-down-line"></i>
+                </div>
+                <div class="content-data">
+                    <div class="tiles">
+                        <div class="elements">
+                            <h4>Digital Design</h4>
+                            <p>I create stunning digital designs that engage and inspire your audience. Let me bring
+                                your brand to life with my skills.</p>
+                        </div>
+                        <div class="elements">
+                            <h4>Art Direction</h4>
+                            <p>My art direction expertise ensures that your project is on brand, on message, and
+                                visually stunning. Let's tell your story together.</p>
+                        </div>
+                    </div>
+                    <div class="tiles">
+                        <div class="elements">
+                            <h4>Interaction Design</h4>
+                            <p>I specialize in designing intuitive user experiences that are both functional and
+                                beautiful.</p>
+                        </div>
+                        <div class="elements">
+                            <h4>Motion Design</h4>
+                            <p>From animated logos to explainer videos, I bring your message to life with visually
+                                stunning motion design.</p>
+                        </div>
+
                     </div>
                 </div>
             </div>
